src/github.com/ebay/beam/query/parser/testdata/select/errors/var_not_in_where.bql
SELECT ?rim
WHERE {
    ?rims rdf:type products:rims
}
